# joypad-os-ds4

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  mkdocs.yml
.github/workflows/: build.yml
.vercel/: project.json
docs/: BUILD.md  ESP32.md  HARDWARE.md  USB_OUTPUT.md
docs/adapters/: bluetooth.md
docs/apps/: BT2USB.md  NEO2USB.md  USB2NEO.md
docs/consoles/: NEOGEO.md
docs/features/: SNES_RUMBLE.md
docs/protocols/: PCENGINE.md
esp/: CMakeLists.txt  Makefile  env.sh  partitions_uf2.csv  sdkconfig.board.devkit  sdkconfig.board.feather_esp32s3  sdkconfig.board.xiao_esp32s3  sdkconfig.defaults
esp/main/: CMakeLists.txt  btstack_config.h  btstack_hal_esp32.c  button_esp32.c  flash_esp32.c  main.c  stubs_peripheral.c  tusb_config_esp32.h  ws2812_esp32.c
esp/main/pico/: rand.h
nrf/: CMakeLists.txt  Makefile  pm_static_adafruit_feather_nrf52840_nrf52840.yml  prj_usb2usb.conf
nrf/boards/: adafruit_feather_nrf52840.conf  adafruit_feather_nrf52840.overlay
nrf/src/: button_nrf.c  display_i2c_nrf.c  main.c  max3421_host_nrf.c  tusb_config_nrf.h  ws2812_nrf.c
src/: CMakeLists.txt  main.c  tusb_config.h
src/apps/bt2nuon/: app.c  app.h  profiles.h
src/apps/bt2usb/: app.c
src/apps/controller/: app.c
src/apps/controller_btusb/: app.c  app.h
src/apps/gc2usb/: app.c  app.h  app_config.h  profiles.h
src/apps/n642nuon/: app.c  app.h  profiles.h
src/apps/n642usb/: app.c  app.h  app_config.h  profiles.h
src/apps/neogeo2usb/: app.c  app.h  app_config.h  profiles.h
src/apps/nuon2usb/: readme.md
src/apps/nuonserial/: app.c  app.h  app_config.h  usb_descriptors.c
src/apps/usb2ble/: app.c  app.h
src/apps/usb2dc/: app.c
src/apps/usb2gc/: profiles.h
src/apps/usb2neogeo/: app.h
src/apps/usb2usb/: app.c
src/bt/ble_output/: ble_gamepad.gatt  ble_output.c  ble_output.h  ble_output_xbox.c  ble_output_xbox.h  ble_xbox.gatt  ble_xbox_gatt_db.c
src/bt/bthid/: bthid.c  bthid.h  bthid_registry.c
src/bt/bthid/devices/generic/: bthid_gamepad.c  bthid_gamepad.h
src/bt/bthid/devices/vendors/microsoft/: xbox_ble.c
src/bt/bthid/devices/vendors/nintendo/: switch2_ble.c  switch_pro_bt.c  wii_u_pro_bt.c  wiimote_bt.c  wiimote_bt.h
src/bt/bthid/devices/vendors/sony/: ds3_bt.c  ds4_bt.c  ds5_bt.c
src/bt/btstack/: bt_device_db.c  btstack_config.h  btstack_config_esp32.h  btstack_host.c  btstack_host.h
src/bt/transport/: bt_transport.c  bt_transport.h  bt_transport_esp32.c
src/core/: input_event.h
src/core/router/: router.c  router.h
src/core/services/button/: button.c  button.h
src/core/services/display/: display.c  display.h
src/core/services/hotkeys/: hotkeys.c
src/core/services/leds/neopixel/: ws2812.c  ws2812.h
src/core/services/players/: feedback.c
src/core/services/profiles/: profile.c  profile.h  profile_indicator.c  profile_indicator.h
src/core/services/storage/: flash.c  flash.h  ps4_auth_flash.c  ps4_auth_flash.h  ps4_event_log.c  ps4_event_log.h
src/drivers/joywing/: joywing_input.c  joywing_input.h
src/drivers/seesaw/: seesaw.c  seesaw.h
src/native/device/dreamcast/: dreamcast_device.c  dreamcast_device.h
src/native/device/gamecube/: gamecube_device.c
src/native/device/gpio/: gpio_buttons.h  gpio_device.c  gpio_device.h
src/native/device/loopy/: loopy_device.c
src/native/device/neogeo/: neogeo_device.c
src/native/device/nuon/: nuon_device.c  nuon_serial_device.c  nuon_serial_device.h
src/native/device/pcengine/: pcengine_device.c
src/native/host/arcade/: arcade_host.h
src/native/host/gc/: gc_host.c  gc_host.h
src/native/host/n64/: n64_host.c  n64_host.h
src/pad/: pad_input.c  pad_input.h
src/pad/configs/: alpakka.h  macropad.h
src/platform/: platform.h  platform_i2c.h
src/platform/esp32/: platform_esp32.c  platform_i2c_esp32.c
src/platform/nrf/: platform_nrf.c
src/platform/rp2040/: platform_i2c_rp2040.c  platform_rp2040.c
src/usb/usbd/: usbd.c  usbd.h  usbd_mode.h
src/usb/usbd/cdc/: cdc_commands.c  cdc_protocol.h
src/usb/usbd/descriptors/: gc_adapter_descriptors.h  hid_descriptors.h  ps3_descriptors.h  ps4_descriptors.h  sinput_descriptors.h  xinput_descriptors.h
src/usb/usbd/drivers/: tud_xbone.c  tud_xinput.c  tud_xinput.h
src/usb/usbd/modes/: gc_adapter_mode.c  memmap_mbedtls_ram.ld  pcemini_mode.c  ps3_mode.c  ps4_local_auth.c  ps4_local_auth.h  ps4_mbedtls_config.h  ps4_mode.c  sinput_mode.c
src/usb/usbh/: usbh.c  usbh.h
src/usb/usbh/hid/devices/generic/: hid_keyboard.c  hid_parser.c  sinput_host.c
src/usb/usbh/hid/devices/vendors/microsoft/: ms_sidewinder_dualstrike.c
src/usb/usbh/hid/devices/vendors/nintendo/: gamecube_adapter.c  switch2_pro.c  switch_pro.c
src/usb/usbh/hid/devices/vendors/sony/: sony_ds3.c  sony_ds4.c  sony_ds5.c
src/usb/usbh/xbone_auth/: xbone_auth.c
src/usb/usbh/xinput/: xinput.c
src/wifi/jocp/: jocp_input.c  wifi_transport.c  wifi_transport.h
tools/ps4-auth-upload/: ps4_auth_upload.html
tools/web-config/: app.js  cdc-protocol.js  index.html
tools/web-config/src/: app.js  cdc-protocol.js  index.html
